erDiagram

  roles {
    UUID role_id PK
    VARCHAR role_name UK
    VARCHAR description
    TIMESTAMPTZ created_at
  }

  person_identity {
    UUID person_id PK
    VARCHAR person_code UK
    VARCHAR pan_hash UK
    VARCHAR pan_first3
    VARCHAR pan_last2
    TIMESTAMPTZ created_at
    TIMESTAMPTZ updated_at
  }

  users {
    UUID user_id PK
    VARCHAR user_code UK
    UUID person_id FK
    UUID role_id FK
    VARCHAR first_name
    VARCHAR last_name
    VARCHAR email UK
    VARCHAR phone
    VARCHAR password
    BOOLEAN is_active
    BOOLEAN is_deleted
    TIMESTAMPTZ deleted_at
    UUID deleted_by
    TIMESTAMPTZ created_at
    TIMESTAMPTZ updated_at
  }

  borrower_profile {
    UUID borrower_id PK
    VARCHAR borrower_code UK
    UUID user_id FK
    NUMERIC monthly_income
    INT existing_loan_count
    TIMESTAMPTZ created_at
    TIMESTAMPTZ updated_at
  }

  employee_profile {
    UUID employee_id PK
    VARCHAR employee_code UK
    UUID user_id FK
    DATE joining_date
    NUMERIC salary
    BOOLEAN is_active
    TIMESTAMPTZ created_at
    TIMESTAMPTZ updated_at
  }

  loan_applications {
    UUID application_id PK
    VARCHAR application_code UK
    UUID user_id FK
    NUMERIC requested_amount
    NUMERIC interest_rate
    INT tenure_months
    NUMERIC existing_emi
    NUMERIC dti_ratio
    VARCHAR suggested_strategy
    VARCHAR officer_strategy
    VARCHAR status
    TIMESTAMPTZ applied_at
    UUID reviewed_by FK
    TIMESTAMPTZ reviewed_at
    BOOLEAN is_deleted
    TIMESTAMPTZ deleted_at
    UUID deleted_by
  }

  loans {
    UUID loan_id PK
    VARCHAR loan_code UK
    UUID application_id FK
    UUID user_id FK
    NUMERIC principal_amount
    NUMERIC interest_rate
    INT tenure_months
    VARCHAR strategy
    NUMERIC emi_amount
    DATE start_date
    DATE end_date
    VARCHAR loan_status
    TIMESTAMPTZ created_at
  }

  emi_schedule {
    UUID emi_id PK
    UUID loan_id FK
    INT installment_no
    DATE due_date
    NUMERIC principal_component
    NUMERIC interest_component
    NUMERIC total_emi
    NUMERIC remaining_balance
    NUMERIC amount_paid
    VARCHAR status
    DATE paid_date
  }

  payments {
    UUID payment_id PK
    UUID emi_id FK
    UUID loan_id FK
    NUMERIC amount_paid
    TIMESTAMPTZ payment_date
    VARCHAR payment_mode
    VARCHAR status
    JSONB payment_metadata
  }

  notifications {
    UUID notification_id PK
    UUID user_id FK
    UUID loan_id FK
    UUID emi_id FK
    VARCHAR email
    VARCHAR subject
    TEXT message
    TIMESTAMPTZ sent_at
    VARCHAR status
    BOOLEAN is_deleted
    TIMESTAMPTZ deleted_at
    UUID deleted_by
  }

  audit_logs {
    UUID audit_id PK
    UUID actor_id FK
    VARCHAR action
    VARCHAR entity_type
    UUID entity_id
    VARCHAR description
    JSONB old_value
    JSONB new_value
    TIMESTAMPTZ action_time
  }

  otp_tokens {
    UUID id PK
    VARCHAR email
    VARCHAR otp_code
    VARCHAR purpose
    TIMESTAMP expiry_time
  }

  strategy_audit {
    UUID id PK
    UUID application_id FK
    VARCHAR system_strategy
    VARCHAR officer_strategy
    BOOLEAN overridden
    UUID changed_by FK
    TIMESTAMPTZ changed_at
  }

  roles               ||--o{ users              : "role_id"
  person_identity     ||--o{ users              : "person_id"
  users               ||--o| borrower_profile   : "user_id"
  users               ||--o| employee_profile   : "user_id"
  users               ||--o{ loan_applications  : "user_id (applicant)"
  users               ||--o{ loan_applications  : "reviewed_by (officer)"
  users               ||--o{ loans              : "user_id"
  users               ||--o{ notifications      : "user_id"
  users               ||--o{ audit_logs         : "actor_id"
  users               ||--o{ strategy_audit     : "changed_by"
  loan_applications   ||--o| loans              : "application_id"
  loan_applications   ||--o{ strategy_audit     : "application_id"
  loans               ||--o{ emi_schedule       : "loan_id"
  loans               ||--o{ payments           : "loan_id"
  loans               ||--o{ notifications      : "loan_id"
  emi_schedule        ||--o{ payments           : "emi_id"
  emi_schedule        ||--o{ notifications      : "emi_id"